--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ for:
     matrix:
       only:
         - platform: Win32
-        - VAR_A: value_1
+          VAR_A: value_1
       
     environment:
       VAR_B: value_2
@@ -40,7 +40,7 @@ for:
     matrix:
       only:
         - platform: x64
-        - VAR_A: value_1
+          VAR_A: value_1
 
     environment:
       VAR_B: value_3
