--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,9 +15,6 @@ matrix:
 
 environment:
   VAR_B: value_1
-  matrix:
-    - VAR_A: value_1
-    - VAR_A: value_2
 
 configuration: Release
 
@@ -26,21 +23,8 @@ build_script:
       echo %VAR_A%
       echo %VAR_B%
 
-for:
-  -
-    matrix:
-      only:
-        - platform: Win32
-          VAR_A: value_1
-      
-    environment:
-      VAR_B: value_2
-
-  -
-    matrix:
-      only:
-        - platform: x64
-          VAR_A: value_1
-
-    environment:
-      VAR_B: value_3
+deploy:
+  provider: Webhook
+  on:
+    message: /\[test-message\]/
+  url: https://webhook.site/25526b7b-37b8-4c81-8d6a-910e1f10bf22
